; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/panfrost/extr_panfrost_gem_shrinker.c_panfrost_gem_shrinker_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/panfrost/extr_panfrost_gem_shrinker.c_panfrost_gem_shrinker_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { %struct.panfrost_device* }
%struct.panfrost_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32 }

@panfrost_gem_shrinker_count = common dso_local global i32 0, align 4
@panfrost_gem_shrinker_scan = common dso_local global i32 0, align 4
@DEFAULT_SEEKS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @panfrost_gem_shrinker_init(%struct.drm_device* %0) #0 {
  %2 = alloca %struct.drm_device*, align 8
  %3 = alloca %struct.panfrost_device*, align 8
  store %struct.drm_device* %0, %struct.drm_device** %2, align 8
  %4 = load %struct.drm_device*, %struct.drm_device** %2, align 8
  %5 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %4, i32 0, i32 0
  %6 = load %struct.panfrost_device*, %struct.panfrost_device** %5, align 8
  store %struct.panfrost_device* %6, %struct.panfrost_device** %3, align 8
  %7 = load i32, i32* @panfrost_gem_shrinker_count, align 4
  %8 = load %struct.panfrost_device*, %struct.panfrost_device** %3, align 8
  %9 = getelementptr inbounds %struct.panfrost_device, %struct.panfrost_device* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 2
  store i32 %7, i32* %10, align 4
  %11 = load i32, i32* @panfrost_gem_shrinker_scan, align 4
  %12 = load %struct.panfrost_device*, %struct.panfrost_device** %3, align 8
  %13 = getelementptr inbounds %struct.panfrost_device, %struct.panfrost_device* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 1
  store i32 %11, i32* %14, align 4
  %15 = load i32, i32* @DEFAULT_SEEKS, align 4
  %16 = load %struct.panfrost_device*, %struct.panfrost_device** %3, align 8
  %17 = getelementptr inbounds %struct.panfrost_device, %struct.panfrost_device* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  store i32 %15, i32* %18, align 4
  %19 = load %struct.panfrost_device*, %struct.panfrost_device** %3, align 8
  %20 = getelementptr inbounds %struct.panfrost_device, %struct.panfrost_device* %19, i32 0, i32 0
  %21 = call i32 @register_shrinker(%struct.TYPE_2__* %20)
  %22 = call i32 @WARN_ON(i32 %21)
  ret void
}

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @register_shrinker(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
